# realm-starter

./: .gitignore  .pre-commit-config.yaml  .zshrc  Cargo.toml  README.md  auto.sh  diesel.toml  dodo.py  index.template.html  observer.gsub  observer.json  pristine.db  realm.gsub  requirements.in  requirements.txt  shell.nix
dj/: manage.py
dj/hello/: models.py
dj/hello/migrations/: 0001_initial.py  0002_todo.py
dj/proj/: settings.py  wsgi.py
frontend/: Routes.elm  Storybook.elm  Test.elm  elm.json
frontend/Pages/: Index.elm  IndexTest.elm  NotFound.elm  NotFoundTest.elm
scripts/: clippy.sh  create_diesel_toml_pg.py  create_diesel_toml_sqlite.py  django-check.sh  migrate.sh  realm-starter.sh
src/: db.rs  lib.rs  main.rs  not_found.rs  prelude.rs  reverse.rs  schema.rs
src/routes/: increment.rs  index.rs  mod.rs  todo.rs
templates/pages/: index.html
