[package]
name = "realm_tutorial"
version = "0.1.0"
edition = "2018"

[dependencies]
realm = { path = "../amitu_heroku/realm", features=["sqlite", "sqlite_default"] }
realm_macros = { path = "../amitu_heroku/realm/realm_macros" }
failure = "~0.1.1"
http = "0.1.17"
hyper = "0.12.33"
futures = "0.1.26"
serde_derive = "~1.0.0"
serde = "~1.0.0"
askama = "0.9"
diesel = { version = "1.4.2", features = ["sqlite"] }
